Tweak .3rem to .5rem to avoid display shift

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,7 +67,7 @@ $lavender: #E6E6FA !default; // lavender
     display: none;  // Turned on by page-header-dropdown
     z-index: 20;  // High enough to cover up msgq
     //margin-top: .7rem;
-    padding: .3rem 0 .6rem 0;
+    padding: .5rem 0 .6rem 0;
     border: 0;
     background-color: black;
     //color: black;
